--- a/css.css
+++ b/css.css
@@ -1,3 +1,19 @@
 p {
     color: red;
 }
+header {
+	display: flex;
+	justify-content: end;
+	background-color: black;
+	height: 10vh;
+	padding: 1em;
+}
+main {
+	height: 80vh;
+}
+footer {
+	height: 10vh;
+}
+.btn {
+	margin: 0.2em;
+}
