--- a/css.css
+++ b/css.css
@@ -1,3 +1,13 @@
-p {
-    color: red;
+
+header {
+    padding: 1em;
+    height: 15vh;
+}
+main {
+    padding: 1em;
+    height: 80vh;
+}
+footer {
+    padding: 1em;
+    height: 5vh;
 }
